# setup

./: README.md  install.sh
config/: NVIM_TIPS.md  README.md  install.sh
config/nvim/: init.lua  lazy-lock.json
config/nvim/lua/config/: lazy.lua
config/nvim/lua/custom/plugins/: completion.lua  lsp.lua  mini.lua  telescope.lua  treesitter.lua
uvtools/: .gitignore
uvtools/clipboard_tool/: mycopy.py  mypaste.py  pyproject.toml
uvtools/hey/src/hey/: __main__.py
uvtools/mtai/: pyproject.toml
uvtools/mtai/src/mtai/: __main__.py
